--- a/client/src/Components/SideNav/SideNav.css
+++ b/client/src/Components/SideNav/SideNav.css
@@ -9,14 +9,15 @@
 }
 
 #selected-tile {
-  width: 100px;
-  height: 150px;
-  background-color: #e67e22;
+  width: 125px;
+  height: 125px;
+  background-color: #bdc3c7;
+  border-radius: 10px;
 }
 
 #erase {
-  width: 100px;
-  height: 25px;
-  background-color: #34495e;
-  color: white;
+  text-align: center;
+  cursor: pointer;
+  margin-top: 10px;
+  color: #ecf0f1;
 }
