--- a/client/src/Components/Tile/Tile.css
+++ b/client/src/Components/Tile/Tile.css
@@ -1,4 +1,6 @@
 .tile {
-  width: 200px;
-  height: 200px;
+  width: 100px;
+  height: 100px;
+  /* border: 1px solid white; */
+  display: inline-block;
 }
