--- a/client/src/Components/TileModal/TileModal.css
+++ b/client/src/Components/TileModal/TileModal.css
@@ -1,13 +1,29 @@
 .tile-modal {
   background-color: #2c3e50;
   height: 92vh;
-  width: 20vw;
+  width: 22vw;
   position: absolute;
   left: 20vw;
-  overflow: scroll;
+  top: 8vh;
+  overflow-y: scroll;
+  z-index: 1;
+  padding-top: 20px;
 }
 
+.tile-modal::-webkit-scrollbar {
+  background-color: rgba(0,0,0,0.0);
+  width: 10px;
+}
+
+.tile-modal::-webkit-scrollbar-thumb {
+  background-color: #ecf0f1;
+  border-radius: 10px;
+}
+
+
 #close-modal {
-  position: absolute;
-  right: 0;
+  position: fixed;
+  left: 39vw;
+  top: 10vh;
+  cursor: pointer;
 }
