--- a/client/src/Components/TileSelect/TileSelect.css
+++ b/client/src/Components/TileSelect/TileSelect.css
@@ -1,5 +1,7 @@
 .tile-select {
   width: 100px;
-  height: 150px;
-  background-color: #ecf0f1;
+  height: 100px;
+  background-color: #34495e;
+  border-radius: 10px;
+  margin-bottom: 20px;
 }
