--- a/client/src/Components/SideNav/SideNav.css
+++ b/client/src/Components/SideNav/SideNav.css
@@ -11,7 +11,7 @@
 #selected-tile {
   width: 125px;
   height: 125px;
-  background-color: #bdc3c7;
+  background-color: #ecf0f1;
   border-radius: 10px;
 }
 
